# clash

./: README.md
backend/: .gitignore  Cargo.toml  README.md
backend/src/: lib.rs  main.rs
backend/src/config/: settings.rs
backend/src/handlers/: health.rs  mod.rs  player.rs
backend/src/models/: error.rs  mod.rs  player.rs
backend/src/repositories/: clash_api_repository.rs  mod.rs
backend/src/services/: clash_api.rs  mod.rs  player_service.rs
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
